--- a/index.html
+++ b/index.html
@@ -1,129 +1,67 @@
-<!DOCTYPE html>             
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calendar with Events</title>
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous"
-    />
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Calendar with Events</title>
+<link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+/>
 
-    <style>
-        .today {
-        background-color: #0d6efd !important; /* Bootstrap 蓝色 */
-        color: white !important;
-        border-radius: 6px;
-        font-weight: bold;
-    }
+<link href="index.css" rel="stylesheet"/>
 
-    </style>
-  </head>
-  <body>
-
-    <div class="container mt-4">
-        <div class="d-flex justify-content-center mb-3 h1">Task Calendar</div>
-        <div class="row mb-3 d-flex justify-content-center">
-            <div class="col-3">
-                <select id="yearSelect" class="form-select"></select>
-            </div>
-            <div class="col-3">
-                <select id="monthSelect" class="form-select">
-                    <option value="0">January</option>
-                    <option value="1">February</option>
-                    <option value="2">March</option>
-                    <option value="3">April</option>
-                    <option value="4">May</option>
-                    <option value="5">June</option>
-                    <option value="6">July</option>
-                    <option value="7">August</option>
-                    <option value="8">September</option>
-                    <option value="9">October</option>
-                    <option value="10">November</option>
-                    <option value="11">December</option>
-                </select>
-            </div>
+</head>
+<body>
+<div class="container mt-4">
+    <div class="d-flex justify-content-center mb-3 h1">Task Calendar</div>
+    <div class="row mb-3 d-flex justify-content-center">
+        <div class="col-3">
+            <select id="yearSelect" class="form-select"></select>
         </div>
-    
-        <div id="calendar"></div>
-
-        <div class="tip">
-             (*Double-click a date to edit or view the tasks for that day)
+        <div class="col-3">
+            <select id="monthSelect" class="form-select">
+                <option value="0">January</option>
+                <option value="1">February</option>
+                <option value="2">March</option>
+                <option value="3">April</option>
+                <option value="4">May</option>
+                <option value="5">June</option>
+                <option value="6">July</option>
+                <option value="7">August</option>
+                <option value="8">September</option>
+                <option value="9">October</option>
+                <option value="10">November</option>
+                <option value="11">December</option>
+            </select>
         </div>
     </div>
+    <div id="calendar"></div>
+    <div class="tip">(*Double-click a date to edit or view the tasks for that day)</div>
+</div>
 
+<!-- Modal -->
+<div id="taskModal" class="modal-custom" style="display:none;">
+    <div class="modal-header">
+        <h5 id="modalTitle"></h5>
+        <button class="close-btn" style="margin-bottom: 0.7rem;" onclick="closeModal()">×</button>
+    </div>
 
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-     >
-    </script>
+    <textarea class="mt-2" id="taskTextarea" readonly></textarea>
+    <div class="modal-footer">
+        <button id="editBtn" class="btn btn-primary" onclick="enableEdit()">Edit</button>
+        <div class="d-none" id="editFooter">
+            <button class="btn btn-secondary" onclick="cancelEdit()">Cancel</button>
+            <button class="btn btn-success" onclick="saveTask()">Save</button>
+        </div>
+    </div>
+</div>
 
-  <script>
-    // 1. 填充年份下拉
-    const yearSelect = document.getElementById("yearSelect");
-    const monthSelect = document.getElementById("monthSelect");
-    const calendar = document.getElementById("calendar");
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
-    const currentYear = new Date().getFullYear();
-    for (let y = currentYear - 10; y <= currentYear + 10; y++) {
-        yearSelect.innerHTML += `<option value="${y}">${y}</option>`;
-    }
-
-    yearSelect.value = currentYear;
-    monthSelect.value = new Date().getMonth();
-
-    // 2. 生成日历
-    function generateCalendar(year, month) {
-        const firstDay = new Date(year, month, 1).getDay();
-        const daysInMonth = new Date(year, month + 1, 0).getDate();
-
-        let html = `
-            <table class="table table-bordered text-center">
-                <thead>
-                    <tr>
-                        <th>Su</th><th>Mo</th><th>Tu</th><th>We</th>
-                        <th>Th</th><th>Fr</th><th>Sa</th>
-                    </tr>
-                </thead>
-                <tbody><tr>
-        `;
-
-        // 空白格
-        for (let i = 0; i < firstDay; i++) {
-        html += "<td></td>";
-        }
-
-
-        //开始填日期
-        for (let d = 1; d <= daysInMonth; d++) {
-         if ((firstDay + d - 1) % 7 === 0) html += "</tr><tr>";
-
-        const isToday =
-        year == new Date().getFullYear() &&
-        month == new Date().getMonth() &&
-        d == new Date().getDate();
-
-        const className = isToday ? "today" : "";
-
-        html += `<td class="${className}">${d}</td>`;
-        }
-
-        html += "</tr></tbody></table>";
-        calendar.innerHTML = html;
-    }
-
-    generateCalendar(currentYear, new Date().getMonth());
-
-    // 3. 监听变化
-    yearSelect.onchange = monthSelect.onchange = function () {
-        generateCalendar(yearSelect.value, monthSelect.value);
-    };
-    </script>
-
-  </body>
+<script src="index.js"></script>
+</body>
 </html>
