--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-center mb-3 h1">Task Calendar</div>
     <div class="row mb-3 d-flex justify-content-center">
-        <div class="col-3">
-            <select id="yearSelect" class="form-select"></select>
+        <div class="col-5 col-lg-3" >
+            <select id="yearSelect" class="form-select" ></select>
         </div>
-        <div class="col-3">
+        <div class="col-5 col-lg-3">
             <select id="monthSelect" class="form-select">
                 <option value="0">January</option>
                 <option value="1">February</option>
